# yggdrasil

./: .env.example  .envrc  .gitignore  LICENSE  README.md  docker-compose.yaml  example_config.yaml  nginx_example.conf  pyproject.toml
.github/install_python_env/: action.yml
.github/workflows/: CI.yml
react-ts/: .gitignore  codegen.ts  index.html  package-lock.json  package.json  schema.graphql
react-ts/src/: App.tsx  Board.tsx  BoardBackgroundEarthPornImage.tsx  BoardBackgroundStyle.tsx  LinkBox.tsx  Login.tsx  Section.tsx  UserMenu.tsx  apollo-client.ts  app.tsx  currentUser.tsx  editMode.tsx  index.css  localStorage.ts  main.tsx  queries.graphql  sortable-handlers.ts  sortableHandlers.ts  styles.ts  tools.ts  types.ts
react-ts/src/apps/: app-button.tsx  app-icon.tsx  simple-loop-timer.tsx
react-ts/src/board/: board-background-earth-porn-image.tsx  board-background-style.tsx  board.tsx
react-ts/src/edit-mode/: edit-mode-context.ts  edit-mode-widgets.tsx
react-ts/src/links/: link-form.tsx  link-list.tsx  link-menu.tsx  link-tools.ts
react-ts/src/sections/: section-form.tsx  section-list.tsx
react-ts/src/user/: current-user-context.ts  login.tsx  user-menu.tsx  widgets.tsx
tasks/: __init__.py  api.py  redis_.py  tools.py  top.py  ui.py
tests/: conftest.py  populator.py  tools.py
tests/api/: test_delete_link.py  test_delete_section.py  test_save_link.py  test_save_link_ranks.py  test_save_section.py  test_save_section_ranks.py  test_user.py
tests/components/: test_graphene.py  test_reddit.py
yggdrasil/: app.py  auth_controller.py  db_models.py  db_tables.py  endpoints.py  schema.py  types.py
yggdrasil/alembic/: env.py
yggdrasil/api/: mutations.py  queries.py  schema.py  types.py
yggdrasil/auth/: controller.py
yggdrasil/components/: app_config.py  database.py  env.py  folders.py  injection_middleware.py  logger.py  reddit.py  request_context.py  request_context_middleware.py  tools.py  types.py  user_info.py
yggdrasil/templates/: index.html
yggdrasil/tests/: conftest.py  populator.py  tools.py
(+30 files in other folders)
