[tool.poetry]
name = "yggdrasil"
version = "1.4.0"
description = "Yggdrasil"
authors = ["Lajos Santa <santa.lajos@gmail.com>"]
license = "MIT"
readme = "README.md"
include = ["yggdrasil/ui-dist/**/*.*"]

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.31.1"
graphene = "^3.3"
starlette-graphene3 = "^0.6.0"
pydantic = "^2.3.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.21"
orjson = "^3.9.7"
alembic = "^1.12.0"
asyncpg = "^0.28.0"
authlib = "^1.2.1"
itsdangerous = "^2.1.2"
httpx = "^0.25.0"
pyyaml = "^6.0.1"
async-lru = "^2.0.4"
redis = "^5.0.1"


[tool.poetry.group.dev.dependencies]
testing-postgresql = "^1.3.0"
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
invoke = "^2.2.0"
pytest-watch = "^4.2.0"
gitpython = "^3.1.37"
semver = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
